--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     <hr>
     <p style="font-size:90%; text-align: center">
         {% set projeto %}<a tabindex="0" target='_blank' aria-label='{{_("WikiProject Brazilian Laws project")}}' href='https://www.wikidata.org/wiki/Wikidata:WikiProject_Brazilian_Laws'>{{_("WikiProject Brazilian Laws")}}</a>{% endset %}
-        {{_("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata.", projeto=projeto)}}
+        {{_("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, with support of <b>WikiCite</b>.", projeto=projeto)}}
     </p>
 </footer>
 </body>
