--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,9 @@
         </h3>
         <form id="form_url" action="{{ url_for('create_item_based_in_url') }}" method=post>
             <h4 style="text-align:center">
-                <label for="url">{{ _("You can create a new legislation item by inserting a <i>LeXML</i> or <i>Palácio do Planalto</i> URL into the field bellow:") }}</label>
+                <label for="url">{{ _("You can create a new legislation item by inserting a <i><a target=\"_blank\" href=\"https://www.lexml.gov.br/\">LeXML</a></i> URL into the field bellow:") }}</label>
             </h4>
-            <input id="url" type="url" name="url" class="form-control" placeholder="{{ _('Paste the URL') }}">
+            <input id="url" type="url" name="url" class="form-control" style="font-size:115%;" placeholder="{{ _('Paste the URL') }}">
             <input type="submit" class="btn btn-primary" style="font-size:115%; width:100%; background-color: #029c36" value = {{ _('Submit') }}>
         </form>
     </div>
