--- a/templates/locality.html
+++ b/templates/locality.html
@@ -64,9 +64,9 @@
                 </div>
                 <div class="modal-footer" id="secondModal">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                            style="font-size:125%; ">{{ _("Cancelar") }}</button>
+                            style="font-size:125%; ">{{ _("Cancel") }}</button>
                     <button type="submit" id="addstatement" class="btn btn-primary"
-                            style="font-size:125%; background-color: #029c36;border: 0px">{{ _("Adicionar declaração") }}</button>
+                            style="font-size:125%; background-color: #029c36;border: 0px">{{ _("Add statement") }}</button>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                 dataType: "json",
 
                 success: function () {
-                    alert("{{ _('Declaração inserida com sucesso!') }}");
+                    alert("{{ _('Statement inserted successfully!') }}");
                     window.location.reload();
                     $('#addModal').modal('hide');
                 },
