--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,22 @@
 body {
     font-family: Josefin Sans, sans-serif;
-    font-size: 115%;
+    font-size: 1.5rem;
     padding-right: 0 !important;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-h1, h2, h3, h4 {
+#content {
+    flex: 1 0 auto;
+}
+
+#footer,
+#topnavbar {
+    flex-shrink: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
     font-family: Josefin Sans, sans-serif;
 }
 
@@ -29,7 +41,6 @@ a:hover:not(.button) {
     text-align: center;
     padding: 15px 15px;
     text-decoration: none;
-    font-size: 150%;
 }
 
 .topnav a.right {
@@ -39,7 +50,6 @@ a:hover:not(.button) {
     text-align: center;
     padding: 15px 15px;
     text-decoration: none;
-    font-size: 150%;
 }
 
 .topnav a:hover {
@@ -106,7 +116,6 @@ a:hover:not(.button) {
 
 input {
     font-family: Josefin Sans, sans-serif, "Font Awesome 5 Free";
-    font-weight: 100;
 }
 
 button {
@@ -114,7 +123,6 @@ button {
     border: none;
     border-radius: 5px;
     color: black;
-    font-size: 150%;
     margin: 5px;
     padding: 20px;
     text-align: center;
