--- a/templates/base.html
+++ b/templates/base.html
@@ -29,29 +29,32 @@
         }
     </script>
 </head>
-<body style="height: 100%">
+<body>
 {% block navbar %}{% endblock %}
-<main class="w3-container" id="content" style="min-height:85vh;overflow: auto;padding: 0">
+<main class="w3-container" id="content">
     {% block banner %}
         <div class="w3-row">
-            <div class="w3-container w3-quarter"></div>
-            <h1 class="w3-container w3-half" style="text-align: center; padding-top:60px; padding-bottom:60px">
+            <h1 class="w3-container w3-half" style="text-align: center; padding-top:30px; padding-bottom:30px">
                 {% if lang=="en" %}
-                    <img class="banner" src="{{ url_for('static', filename= 'logo - en.svg') }}" alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="100%"/>
+                    <img class="banner" src="{{ url_for('static', filename= 'logo - en.svg') }}"
+                         alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="75%"/>
                 {% else %}
-                    <img class="banner" src="{{ url_for('static', filename= 'logo - pt.svg') }}" alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="100%"/>
+                    <img class="banner" src="{{ url_for('static', filename= 'logo - pt.svg') }}"
+                         alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="75%"/>
                 {% endif %}
             </h1>
             <div class="w3-container w3-quarter"></div>
         </div>
     {% endblock %}
     {% block content %}{% endblock %}
+    <div class="push"></div>
 </main>
-<footer style="text-align:left;position: relative;padding: 0px 15px 0px 15px" id="footer">
+<footer id="footer" class="footer">
     <hr>
-    <p style="font-size:90%; text-align: center">
-        {% set projeto %}<a tabindex="0" target='_blank' aria-label='{{_("WikiProject Brazilian Laws project")}}' href='https://www.wikidata.org/wiki/Wikidata:WikiProject_Brazilian_Laws'>{{_("WikiProject Brazilian Laws")}}</a>{% endset %}
-        {{_("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, with support of <b>WikiCite</b>.", projeto=projeto)}}
+    <p style="font-size:75%; text-align: center">
+        {% set projeto %}<a tabindex="0" target='_blank' aria-label='{{ _("WikiProject Brazilian Laws project") }}'
+                            href='https://www.wikidata.org/wiki/Wikidata:WikiProject_Brazilian_Laws'>{{ _("WikiProject Brazilian Laws") }}</a>{% endset %}
+        {{ _("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, with support of <b>WikiCite</b>.", projeto=projeto) }}
     </p>
 </footer>
 </body>
