Fixing some translations

--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
             {{ _("You can begin the process of creating a new item by inserting a <i><a target=\"_blank\" href=\"https://www.lexml.gov.br/\">LeXML</a></i> URL into the field bellow.") }}
         </p>
         <p style="text-align:center;padding-top:30px;">
-            {{ _("You can also click on \"Reconciliate\" on the top to identify or create metadata that were not identified by other users.") }}
+            {{ _("You can also click on \"Other tasks\" on the top to identify or create metadata that were not identified by other users.") }}
         </p>
         <input id="url" type="url" name="url" class="form-control" style="font-size:100%"
                placeholder="{{ _('Paste the URL') }}">
