--- a/templates/locality.html
+++ b/templates/locality.html
@@ -52,8 +52,7 @@
                     <div id="term" style="text-align: center;font-size: 150%"></div>
                     <br>
                     <label for="search_field" class="col-form-label" style="font-size: 125%">
-                        {{ _("Search for terms that can represent ") }}
-                        <div id="search_class" style="font-style: italic"></div>
+                        {{ _("Search for terms that can represent ") }} <div id="search_class" style="font-style: italic"></div>
                     </label>
                     <input type="search" class="form-control" placeholder="{{ _('Search') }}" id="search_field"
                            style="font-size: 125%">
