--- a/templates/create.html
+++ b/templates/create.html
@@ -23,8 +23,12 @@
                     <td>
                         {% for item_tipoDocumento in tipoDocumento %}
                             {% if item_tipoDocumento.wikidatified %}
-                                <a target="_blank" title="{{ item_tipoDocumento.label }}"
-                                   href="https://www.wikidata.org/wiki/{{ item_tipoDocumento.qid }}">
+                                <a target="_blank" title="{{ item_tipoDocumento.label }}" style="color: #029c36"
+                                   data-qid="{{ item_tipoDocumento.qid }}"
+                                   data-toggle="modal"
+                                   data-label="{{ item_tipoDocumento.label }}"
+                                   data-search_class="type"
+                                   data-target="{% if username %}#addModal{% else %}#authenticate{% endif %}">
                                     {{ item_tipoDocumento.label }}
                                 </a>
                             {% else %}
@@ -53,8 +57,12 @@
                     <td>
                         {% for item_localidade in localidade %}
                             {% if item_localidade.wikidatified %}
-                                <a target="_blank" title="{{ item_localidade.label }}"
-                                   href="https://www.wikidata.org/wiki/{{ item_localidade.qid }}">
+                                <a target="_blank" title="{{ item_localidade.label }}" style="color: #029c36"
+                                   data-qid="{{ item_localidade.qid }}"
+                                   data-toggle="modal"
+                                   data-label="{{ item_localidade.label }}"
+                                   data-search_class="locality"
+                                   data-target="{% if username %}#addModal{% else %}#authenticate{% endif %}">
                                     {{ item_localidade.label }}
                                 </a>
                             {% else %}
@@ -75,8 +83,12 @@
                     <td>
                         {% for item_autoridade in autoridade %}
                             {% if item_autoridade.wikidatified %}
-                                <a target="_blank" title="{{ item_autoridade.label }}"
-                                   href="https://www.wikidata.org/wiki/{{ item_autoridade.qid }}">
+                                <a target="_blank" title="{{ item_autoridade.label }}" style="color: #029c36"
+                                   data-qid="{{ item_autoridade.qid }}"
+                                   data-toggle="modal"
+                                   data-label="{{ item_autoridade.label }}"
+                                   data-search_class="authority"
+                                   data-target="{% if username %}#addModal{% else %}#authenticate{% endif %}">
                                     {{ item_autoridade.label }}
                                 </a>
                             {% else %}
@@ -97,8 +109,12 @@
                     <td>
                         {% for item_subject in subject %}
                             {% if item_subject.wikidatified %}
-                                <a target="_blank" title="{{ item_subject.label }}"
-                                   href="https://www.wikidata.org/wiki/{{ item_subject.qid }}">
+                                <a target="_blank" title="{{ item_subject.label }}" style="color: #029c36"
+                                   data-qid="{{ item_subject.qid }}"
+                                   data-toggle="modal"
+                                   data-label="{{ item_subject.label }}"
+                                   data-search_class="subject"
+                                   data-target="{% if username %}#addModal{% else %}#authenticate{% endif %}">
                                     {{ item_subject.label }}
                                 </a>
                             {% else %}
@@ -138,10 +154,10 @@
                 {{ _("Use <b>{{Cite Q|%(qid)s}}</b> to cite this item as reference on the English Wikipedia.", qid=qid) }}
                 <br><br>
             {% endif %}
-            {{ _("Some parameters might not be fully identified and thus will be presented in red and with a \"Reconcile\" tag at the table on the side.") }}<br><br>
-            {{ _("The parameters are presented in a mixture of <i>Quick Statements</i> and the <i>LeXML API</i> formats.") }}<br><br>
-            {{ _("To <i>wikidatify</i> the metadata, click on \"Reconcile\" and search for the entity. If you can't find it, select \"Not found/nonexistent\".") }}<br><br>
-            {{ _("To create or update an item using the Quick Statements tool, click in \"Upload to Wikidata\".") }}<br>
+            {{ _("<b>Some parameters might not be fully identified</b> and thus will be presented in red and with a \"Reconcile\" tag at the table.") }}<br><br>
+            {{ _("<b>To <i>wikidatify</i> the metadata</b>, click on \"Reconcile\" and search for an equivalent Wikidata entity. If you can't find it, select \"Not found/nonexistent\".") }}<br><br>
+            {{ _("<b>To edit any reconciled metadata</b>, click on its link and search for a new entity value for the metadata.") }}<br><br>
+            {{ _("<b>To create or update an item</b>, click in \"Upload to Wikidata\".") }}<br>
         </div>
     </div>
     <div class="w3-container">
@@ -192,7 +208,7 @@
                         <div id="term" style="text-align: center;font-size: 150%"></div>
                         <br>
                         <label for="search_field" class="col-form-label" style="font-size: 125%">
-                            {{ _("Search for terms that can represent ") }}
+                            {{ _("Search for items that can represent ") }}
                             <div id="search_class" style="font-style: italic"></div>
                         </label>
                         <input type="search" class="form-control" placeholder="{{ _('Search') }}" id="search_field"
@@ -215,10 +231,12 @@
     <script>
         $('#addModal').on('show.bs.modal', function (event) {
             var term = $(event.relatedTarget).attr('data-label');
+            var qid = $(event.relatedTarget).attr('data-qid');
             var search_class = $(event.relatedTarget).attr('data-search_class');
             $(this).find("#secondModal #addstatement").attr('data-label', term);
             $(this).find("#secondModal #addstatement").attr('data-search_class', search_class);
-            $(this).find("#modalbody #term").text(term);
+            $(this).find("#modalbody #term").empty();
+            $(this).find("#modalbody #term").append('<a target="_blank" title="' + term + '" href="https://www.wikidata.org/wiki/' + qid + '">' + term + '</a>');
             $(this).find("#modalbody #search_class").text(term);
         })
 
@@ -300,7 +318,7 @@
             $.ajax({
                 url: "/post",
                 type: "POST",
-                data: JSON.stringify({"data":data,"qid":qid}),
+                data: JSON.stringify({"data": data, "qid": qid}),
                 contentType: "application/json",
                 dataType: "json",
 
