--- a/templates/subject.html
+++ b/templates/subject.html
@@ -10,8 +10,12 @@
 {% block banner %}{% endblock %}
 
 {% block content %}
-    <div class="w3-row" style="margin-top: 30px; text-align: center">
-        <h2>{{ _("Subject") }}</h2>
+    <div class="w3-row" style="text-align: center">
+        <div class="w3-container w3-quarter"></div>
+        <div class="w3-container w3-half">
+            <h2 style="padding-top: 30px;">{{ _("Subject") }}</h2>
+            <h3 style="padding-top: 30px;">{{ _("Subjects in the context of this application means the keywords of an item.") }}</h3>
+        </div>
     </div>
     <div class="w3-row" style="margin-top: 30px">
         <div class="w3-container w3-quarter"></div>
@@ -34,122 +38,5 @@
             </table>
         </div>
     </div>
-    <div class="modal" id="addModal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">{{ _("Reconciliation") }}</h3>
-                    <button type="button" class="close" data-dismiss="modal" style="font-size:125%; ">&times;</button>
-                </div>
-                <div class="modal-body" id="modalbody">
-                    <p style="font-size: 115%">
-                        {{ _("Search for a Wikidata entity corresponding to the term you are trying to reconcile.") }}<br>
-                        {{ _("If no corresponding Wikidata entity exists yet, please check the option") }}
-                        <i>'{{ _("Not found/nonexistent") }}'</i>
-                    </p>
-                    <br>
-                    <div id="term" style="text-align: center;font-size: 150%"></div>
-                    <br>
-                    <label for="search_field" class="col-form-label" style="font-size: 125%">
-                        {{ _("Search for terms that can represent ") }}
-                        <div id="search_class" style="font-style: italic"></div>
-                    </label>
-                    <input type="search" class="form-control" placeholder="{{ _('Search') }}" id="search_field"
-                           style="font-size: 125%">
-                    <br>
-                    <span id="select_instruction" style="font-size: 125%">{{ _("Select an option:") }}</span><br>
-                    <form id="search_results">
-                    </form>
-                </div>
-                <div class="modal-footer" id="secondModal">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                            style="font-size:125%; ">{{ _("Cancel") }}</button>
-                    <button type="submit" id="addstatement" class="btn btn-primary"
-                            style="font-size:125%; background-color: #029c36;border: 0px">{{ _("Add statement") }}</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script>
-        $('#addModal').on('show.bs.modal', function (event) {
-            var term = $(event.relatedTarget).attr('data-label');
-            var search_class = $(event.relatedTarget).attr('data-search_class');
-            $(this).find("#secondModal #addstatement").attr('data-label', term);
-            $(this).find("#secondModal #addstatement").attr('data-search_class', search_class);
-            $(this).find("#modalbody #term").text(term);
-            $(this).find("#modalbody #search_class").text(term);
-        })
-
-        $("#search_field").bind('keyup', function (event) {
-            var unknown = "{{ _('Not found/nonexistent') }}";
-            var search_class = $('#addstatement').attr('data-search_class');
-            var term = $('#addstatement').attr('data-label');
-            if ($(this)[0].value) {
-                search();
-            } else {
-                $("#search_results").empty();
-                $("#search_results").append('<input type="radio" id="unknown" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="unknown"> ' +
-                    '<label for="unknown" style="font-size: 125%"><i>' + unknown + '</i></label><br>');
-            }
-        });
-
-        function search() {
-            var input = $('#search_field')[0].value;
-            var search_class = $('#addstatement').attr('data-search_class');
-            var term = $('#addstatement').attr('data-label');
-            var data = {'term': input};
-
-            console.log(input);
-            $.ajax({
-                url: "/search",
-                type: "POST",
-                data: JSON.stringify(data),
-                contentType: "application/json",
-                dataType: "json",
-
-                success: function (response) {
-                    var unknown = "{{ _('Not found/nonexistent') }}";
-                    $("#search_results").empty()
-
-                    $("#search_results").append('<input type="radio" id="unknown" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="unknown"> ' +
-                        '<label for="unknown" style="font-size: 125%"><i>' + unknown + '</i></label><br>');
-
-                    for (var i = 0; i < (Math.min(15, response.length)); i++) {
-                        $("#search_results").append('<input type="radio" id="' + response[i]["qid"] + '" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="' + response[i]["qid"] + '"> ' +
-                            '<label for="' + response[i]["qid"] + '" style="font-size: 125%"><b style="color: 029c36;font-size: 125%">' + response[i]["label"] + ' (' + response[i]["qid"] + ')</b></label>: ' + response[i]["descr"] + '<br>');
-                    }
-                },
-                error: function () {
-                    alert('{{_("Select one element")}}');
-                }
-            });
-        };
-
-        $('#addstatement').on('click', function () {
-            var claim = $("input[name='claim_option']:checked").val();
-            var category = $("input[name='claim_option']:checked").attr('data-search_class');
-            var term = $("input[name='claim_option']:checked").attr('data-label');
-            var data = {
-                'term': term,
-                'category': category,
-                'qid': claim,
-            }
-            $.ajax({
-                url: "/add_stat",
-                type: "POST",
-                data: JSON.stringify(data),
-                contentType: "application/json",
-                dataType: "json",
-
-                success: function () {
-                    alert("{{ _('Statement inserted successfully!') }}");
-                    window.location.reload();
-                    $('#addModal').modal('hide');
-                },
-                error: function () {
-                    alert("Ocorreu algum erro!");
-                }
-            });
-        });
-    </script>
+    {% include 'modal.html' %}
 {% endblock %}
