--- a/templates/create.html
+++ b/templates/create.html
@@ -137,16 +137,26 @@
                     </td>
                 </tr>
             </table>
-            {% if qs %}
+            {% if data and username %}
                 <button class="btn btn-primary" id="upload_to_wikidata" value="{{ data }}" data-qid="{{ qid }}"
                         style="font-size:100%; width:100%; background-color: #029c36">
                     {{ _("UPLOAD TO WIKIDATA") }}
                 </button>
+            {% else %}
+                <a target="_blank" data-toggle="modal" data-target="#authenticate">
+                    <button class="btn btn-primary" id="authenticate_first"
+                            style="font-size:100%; width:100%; background-color: #029c36">
+                        {{ _("UPLOAD TO WIKIDATA") }}
+                    </button>
+                </a>
             {% endif %}
         </div>
         <div class="w3-container w3-third">
             {% if not qid %}
-                <b><span style="color: red">{{ _("This item doesn't exists yet in Wikidata.") }}</span></b><br><br>
+                <span style="color: red"><b>{{ _("This item doesn't exists yet in Wikidata, or it was recently created.") }}</b>
+                    <sup><a style="color: red" target="_blank"
+                            href="https://www.wikidata.org/w/index.php?title=Special%3ASearch&go=Ir&ns0=1&ns120=1&search={{ urn }}">{{ _("Find on Wikidata") }}</a></sup></span>
+                <br><br>
             {% else %}
                 <b><span
                         style="color: #029c36;">{{ _("This item <a target='_blank' href='https://www.wikidata.org/wiki/%(qid)s' title='Item already exists'>already exists in Wikidata.</a>", qid=qid) }}</span></b>
@@ -160,177 +170,6 @@
             {{ _("<b>To create or update an item</b>, click in \"Upload to Wikidata\".") }}<br>
         </div>
     </div>
-    <div class="w3-container">
-        <div class="modal" id="authenticate">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title">{{ _("Authenticate") }}</h3>
-                        <button type="button" class="close" data-dismiss="modal" style="font-size:125%; ">&times;
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p style="font-size: 115%">
-                            {{ _("In order to reconcile a metadata, you need to log in.") }}<br>
-                        </p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                                style="font-size:100%; ">
-                            {{ _("Cancel") }}
-                        </button>
-                        <a title="{{ _('Log in') }}"
-                           href="{{ url_for('login', next=request.script_root + request.full_path) }}">
-                            <button type="button" class="btn btn-primary"
-                                    style="font-size:100%; background-color: #029c36">
-                                {{ _("Log in") }}
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal" id="addModal">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title">{{ _("Reconciliation") }}</h3>
-                        <button type="button" class="close" data-dismiss="modal" style="font-size:125%; ">&times;
-                        </button>
-                    </div>
-                    <div class="modal-body" id="modalbody">
-                        <p style="font-size: 115%">
-                            {{ _("Search for a Wikidata entity corresponding to the term you are trying to reconcile.") }}<br>
-                            {{ _("If no corresponding Wikidata entity exists yet, please check the option") }}
-                            <i>'{{ _("Not found/nonexistent") }}'</i>
-                        </p>
-                        <br>
-                        <div id="term" style="text-align: center;font-size: 150%"></div>
-                        <br>
-                        <label for="search_field" class="col-form-label" style="font-size: 125%">
-                            {{ _("Search for items that can represent ") }}
-                            <div id="search_class" style="font-style: italic"></div>
-                        </label>
-                        <input type="search" class="form-control" placeholder="{{ _('Search') }}" id="search_field"
-                               style="font-size: 125%">
-                        <br>
-                        <span id="select_instruction" style="font-size: 125%">{{ _("Select an option:") }}</span><br>
-                        <form id="search_results">
-                        </form>
-                    </div>
-                    <div class="modal-footer" id="secondModal">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                                style="font-size:125%; ">{{ _("Cancel") }}</button>
-                        <button type="submit" id="addstatement" class="btn btn-primary"
-                                style="font-size:125%; background-color: #029c36;border: 0px">{{ _("Add statement") }}</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script>
-        $('#addModal').on('show.bs.modal', function (event) {
-            var term = $(event.relatedTarget).attr('data-label');
-            var qid = $(event.relatedTarget).attr('data-qid');
-            var search_class = $(event.relatedTarget).attr('data-search_class');
-            $(this).find("#secondModal #addstatement").attr('data-label', term);
-            $(this).find("#secondModal #addstatement").attr('data-search_class', search_class);
-            $(this).find("#modalbody #term").empty();
-            $(this).find("#modalbody #term").append('<a target="_blank" title="' + term + '" href="https://www.wikidata.org/wiki/' + qid + '">' + term + '</a>');
-            $(this).find("#modalbody #search_class").text(term);
-        })
-
-        $("#search_field").bind('keyup', function (event) {
-            var unknown = "{{ _('Not found/nonexistent') }}";
-            var search_class = $('#addstatement').attr('data-search_class');
-            var term = $('#addstatement').attr('data-label');
-            if ($(this)[0].value) {
-                search();
-            } else {
-                $("#search_results").empty();
-                $("#search_results").append('<input type="radio" id="unknown" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="unknown"> ' +
-                    '<label for="unknown" style="font-size: 125%"><i>' + unknown + '</i></label><br>');
-            }
-        });
-
-        function search() {
-            var input = $('#search_field')[0].value;
-            var search_class = $('#addstatement').attr('data-search_class');
-            var term = $('#addstatement').attr('data-label');
-            var data = {'term': input};
-
-            console.log(input);
-            $.ajax({
-                url: "/search",
-                type: "POST",
-                data: JSON.stringify(data),
-                contentType: "application/json",
-                dataType: "json",
-
-                success: function (response) {
-                    var unknown = "{{ _('Not found/nonexistent') }}";
-                    $("#search_results").empty()
-
-                    $("#search_results").append('<input type="radio" id="unknown" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="unknown"> ' +
-                        '<label for="unknown" style="font-size: 125%"><i>' + unknown + '</i></label><br>');
-
-                    for (var i = 0; i < (Math.min(15, response.length)); i++) {
-                        $("#search_results").append('<input type="radio" id="' + response[i]["qid"] + '" name="claim_option" data-label="' + term + '" data-search_class="' + search_class + '" value="' + response[i]["qid"] + '"> ' +
-                            '<label for="' + response[i]["qid"] + '" style="font-size: 125%"><b style="color: 029c36;font-size: 125%">' + response[i]["label"] + ' (' + response[i]["qid"] + ')</b></label>: ' + response[i]["descr"] + '<br>');
-                    }
-                },
-                error: function () {
-                    alert('{{_("Select one element")}}');
-                }
-            });
-        };
-
-        $('#addstatement').on('click', function () {
-            var claim = $("input[name='claim_option']:checked").val();
-            var category = $("input[name='claim_option']:checked").attr('data-search_class');
-            var term = $("input[name='claim_option']:checked").attr('data-label');
-            var data = {
-                'term': term,
-                'category': category,
-                'qid': claim,
-            }
-            $.ajax({
-                url: "/add_stat",
-                type: "POST",
-                data: JSON.stringify(data),
-                contentType: "application/json",
-                dataType: "json",
-
-                success: function () {
-                    alert("{{ _('Statement inserted successfully!') }}");
-                    window.location.reload();
-                    $('#addModal').modal('hide');
-                },
-                error: function () {
-                    alert("Ocorreu algum erro!");
-                }
-            });
-        });
-
-        $('#upload_to_wikidata').on('click', function (event) {
-            var data = $('#upload_to_wikidata')[0].value;
-            var qid = $('#upload_to_wikidata').attr('data-qid');
-            $.ajax({
-                url: "/post",
-                type: "POST",
-                data: JSON.stringify({"data": data, "qid": qid}),
-                contentType: "application/json",
-                dataType: "json",
-
-                success: function () {
-                    alert("{{ _('Statement inserted successfully!') }}");
-                    window.location.reload();
-                    $('#addModal').modal('hide');
-                },
-                error: function () {
-                    alert("Ocorreu algum erro!");
-                }
-            });
-        });
-    </script>
+    {% include 'modal.html' %}
 {% endblock %}
+
