--- a/templates/reconciliate.html
+++ b/templates/reconciliate.html
@@ -8,35 +8,42 @@
 
 {% block title %}{{ _("Reconciliate") }}{% endblock %}
 
+{% block banner %}{% endblock %}
+
 {% block content %}
-    <div class="w3-row" style="text-align:center; padding-bottom:30px;">
-        <div class="w3-container w3-quarter"></div>
-        <div class="w3-container w3-half">
-            <h2>{{ _("Select one of the categories of metadata to reconciliate unknown or nonexistent values.") }}</h2>
-        </div>
+    <div class="w3-container w3-half" style="text-align:center; padding-top:30px;">
+        <h1 style="text-align: center; padding-bottom:30px">
+            {% if lang=="en" %}
+                <img class="banner" src="{{ url_for('static', filename= 'logo - en.svg') }}"
+                     alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="75%"/>
+            {% else %}
+                <img class="banner" src="{{ url_for('static', filename= 'logo - pt.svg') }}"
+                     alt='{{ _("Logotipo WikiProject Brazilian Laws") }}' width="75%"/>
+            {% endif %}
+        </h1>
+        <h2 style="padding-bottom:30px;">{{ _("Some metadata are not yet registered on Wikidata, or have different labels there from the ones LeXML uses.") }}</h2>
+        <h3 style="padding-bottom:30px;">{{ _("In such cases, users can mark this metadata as \"Not found/nonexistent\", so others users can try to reconcile them.") }}</h3>
     </div>
-    <div class="w3-row" style="margin-top: 30px">
-        <div class="w3-container w3-quarter"></div>
-        <div class="w3-container w3-half">
-            <a href="{{ url_for('reconciliate_category', cat='authority') }}">
-                <button type="button" class="btn btn-primary"
-                        style="font-size:150%; background-color: #029c36;border: 0px; width: 100%">{{ _("Authority") }}</button>
-            </a>
-            <br>
-            <a href="{{ url_for('reconciliate_category', cat='locality') }}">
-                <button type="button" class="btn btn-primary"
-                        style="font-size:150%; background-color: #029c36;border: 0px; width: 100%">{{ _("Locality") }}</button>
-            </a>
-            <br>
-            <a href="{{ url_for('reconciliate_category', cat='type') }}">
-                <button type="button" class="btn btn-primary"
-                        style="font-size:150%; background-color: #029c36;border: 0px; width: 100%">{{ _("Document type") }}</button>
-            </a>
-            <br>
-            <a href="{{ url_for('reconciliate_category', cat='subject') }}">
-                <button type="button" class="btn btn-primary"
-                        style="font-size:150%; background-color: #029c36;border: 0px; width: 100%">{{ _("Subject") }}</button>
-            </a>
-        </div>
+    <div class="w3-container w3-half" style="text-align:center; padding-top:30px;">
+        <p style="padding-bottom:30px;">{{ _("Select one of the categories of metadata to reconciliate unknown or nonexistent values.") }}</p>
+        <a href="{{ url_for('reconciliate_category', cat='authority') }}">
+            <button type="button" class="btn btn-primary"
+                    style="font-size:100%; background-color: #029c36;border: 0; width: 100%">{{ _("Authority") }} ({{ authority_size }})</button>
+        </a>
+        <br>
+        <a href="{{ url_for('reconciliate_category', cat='locality') }}">
+            <button type="button" class="btn btn-primary"
+                    style="font-size:100%; background-color: #029c36;border: 0px; width: 100%">{{ _("Locality") }} ({{ locality_size }})</button>
+        </a>
+        <br>
+        <a href="{{ url_for('reconciliate_category', cat='type') }}">
+            <button type="button" class="btn btn-primary"
+                    style="font-size:100%; background-color: #029c36;border: 0px; width: 100%">{{ _("Document type") }} ({{ type_size }})</button>
+        </a>
+        <br>
+        <a href="{{ url_for('reconciliate_category', cat='subject') }}">
+            <button type="button" class="btn btn-primary"
+                    style="font-size:100%; background-color: #029c36;border: 0px; width: 100%">{{ _("Subject") }} ({{ subject_size }})</button>
+        </a>
     </div>
 {% endblock %}
