--- a/templates/base.html
+++ b/templates/base.html
@@ -51,10 +51,10 @@
 </main>
 <footer id="footer" class="footer">
     <hr>
-    <p style="font-size:75%; text-align: center">
+    <p style="font-size:85%; padding:0 20px 0 20px; text-align: center;">
         {% set projeto %}<a tabindex="0" target='_blank' aria-label='{{ _("WikiProject Brazilian Laws project") }}'
                             href='https://www.wikidata.org/wiki/Wikidata:WikiProject_Brazilian_Laws'>{{ _("WikiProject Brazilian Laws") }}</a>{% endset %}
-        {{ _("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, with support of <b>WikiCite</b>.", projeto=projeto) }}
+        {{ _("<i>WikiProject Brazilian Laws Legislation Importer</i> is an application developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, realized by the <b>Wiki Movimento Brasil</b>, with support of <b>WikiCite</b>.", projeto=projeto) }}
     </p>
 </footer>
 </body>
